# LFRicApps

./: .gitignore  CONTRIBUTORS.md  README.md  dependencies.sh  dependencies.yaml
.github/: zizmor.yml
.github/workflows/: block-stable-base.yaml  check-cr-approved.yaml  cla-check.yaml  lint-fortran.yaml  sphinx-docs.yaml  trigger-project-workflow.yaml  validate_symlinks.yaml
applications/adjoint_tests/example/: configuration.nml  iodef.xml
applications/gravity_wave/example/: iodef.xml
applications/gungho_model/example/: iodef.xml  iodef_lam.xml  (+1 more)
applications/lfric_atm/: Makefile
applications/lfricinputs/: fortitude.toml
applications/shallow_water/: fortitude.toml
documentation/: Makefile  README.md  pyproject.toml
documentation/source/: accessibility.rst  index.rst
documentation/source/developer_guide/lfric_apps_rose_stem/: adding_new_test.rst
documentation/source/developer_guide/psyclone/: index.rst  psyclone_functions.rst  psyclone_makefiles.rst  psyclone_scripts.rst
documentation/source/getting_started/: guide.rst
documentation/source/science_guide/cloud_schemes/: UMDP30_PC2CloudScheme.rst
documentation/source/science_guide/example_section/: scheme1.rst  scheme2.rst
interfaces/jedi_lfric_interface/: fortitude.toml
interfaces/physics_schemes_interface/: fortitude.toml
rose-stem/: rose-suite.conf
rose-stem/templates/: common_macros.cylc  default_directives.cylc  default_task_definitions.cylc
science/adjoint/: fortitude.toml
science/gungho/: fortitude.toml
science/linear/: fortitude.toml
science/physics_schemes/: fortitude.toml
(+400 files in other folders)
