[project]
name = "lfric-apps-documentation"
version = "2026.07.1"
description = "LFRic Applications Documentation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "sphinx==8.1.0",
    "pydata-sphinx-theme==0.16.1",
    "sphinx-sitemap==2.6.0",
    "sphinx_design==0.6.1",
    "sphinx-lint==1.0.2",
]

[project.urls]
repository = "https://github.com/MetOffice/lfric_apps"
documentation = "https://metoffice.github.io/lfric_apps/"
discussion = "https://github.com/MetOffice/simulation-systems/discussions/categories/lfric"

[tool.setuptools]
packages = []
